--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -59,7 +59,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </apex:outputPanel>
 
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <p class="slds-text-body slds-p-vertical_xx-small"><em>Once you have selected all your appointments click next.</em></p>
+                            <p class="slds-text-body slds-p-vertical_xx-small"><em>Once you have made your selections click next.</em></p>
                             <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:commandLink action="{!saveOptions}" onClick="fadeout(); return populateApptJSON();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                                 <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
